Trying to fix banner images so they don't squash.

--- a/_scss/bbg/_blog.scss
+++ b/_scss/bbg/_blog.scss
@@ -6,12 +6,16 @@
 	margin: {
 		bottom: $site-margins;
 	}
+	max-height: 624px;
+	overflow: hidden;
 	position: relative;
 
 	img {
 		width: 100%;
+		/*
 		max-height: 624px;
 		overflow: hidden;
+		*/
 	}
 }
 
